kubernetes/networkpolicy/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: prometheus-ingress
  namespace: monitoring

spec:
  podSelector:
    matchLabels:
      app: prometheus

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: grafana

      ports:
        - protocol: TCP
          port: 9090
